--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -8,17 +8,26 @@ boot_contracts = ["pox", "costs-v2", "bns"]
 
 [project.cache_location]
 path = ".requirements"
+
 [contracts.sip-010-trait-ft-standard]
 path = "contracts/external/sip-010-trait-ft-standard.clar"
+depends_on = []
 
 [contracts.stableswap]
 path = "contracts/stableswap.clar"
+depends_on = ["sip-010-trait-ft-standard", "trait-stableswap"]
+
+[contracts.trait-stableswap]
+path = "contracts/trait-stableswap.clar"
+depends_on = []
 
 [contracts.usda-token]
 path = "contracts/external/usda-token.clar"
+depends_on = ["sip-010-trait-ft-standard"]
 
 [contracts.xusd-token]
 path = "contracts/external/xusd-token.clar"
+depends_on = ["sip-010-trait-ft-standard"]
 
 [repl]
 costs_version = 2
